[package]
name = "hello-world"
version = "0.1.0"
authors = ["Yaroslav Skopets <y.skopets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
envoy-rust-abi = { path = "../../envoy-rust-abi" }
libc = "0.2.66"
